--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cat-funfacts-site",
   "version": "1.0.0",
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
